src/objects/TraffickingData__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TraffickingData</relationshipLabel>
        <relationshipName>TraffickingData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualTimeDisplayed__c</fullName>
        <label>ActualTimeDisplayed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Advertisement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertisement</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TraffickingData</relationshipLabel>
        <relationshipName>TraffickingData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreaCovered_cm__c</fullName>
        <label>AreaCovered(cm)</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountofImpressions__c</fullName>
        <label>Count of Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration(ms)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Page Number</inlineHelpText>
        <label>Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanedAdevertisementDateTime__c</fullName>
        <label>PlanedAdevertisementDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Displayed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Displayed</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>TraffickingData</relationshipLabel>
        <relationshipName>TraffickingData</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TraffickingData</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRD-{0000000}</displayFormat>
        <label>Trafficking Data No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TraffickingData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>